--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -151,7 +151,7 @@
 					<div class="store__wp-wrapper">
 						<h2>WILD PASS</h2>
 						<picture>
-							<img src="{% static 'img/wild_pass.png' %}" alt="wild_pass">
+							<img src="{% static 'img/wild_pass.svg' %}" alt="wild_pass">
 						</picture>
 						<div class="store__wp-wrapper-r">
 							<span>{% trans 'Количество' context "storage_assets" %}: <label id="wp_count">{{ player.cards_count }}</label></span>
