--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -40,14 +40,17 @@
 
 			<div class="profile__top-left">
 
-				<span class="profile__id" onclick="copyTextToClipboard('{{ request.get_host }}/profile/{% autoescape off %}{{ player.pk }}{% endautoescape %}')">
+				<button class="profile__id" id="profile__id">
 					<span>
 						ID: {{ player.pk }} <!-- значение ID игрока -->
 					</span>
-					<svg width="97" height="24" viewBox="0 0 97 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg class="profile__id-corner" width="97" height="24" viewBox="0 0 97 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<rect width="73" height="24" fill="var(--c30)"/><path d="M97 0L73 24V0H97Z" fill="var(--c30)"/>
 					</svg>
-				</span>
+					<svg class="profile__id-copyed" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="var(--c10two)">
+						<path d="M22 2v22h-20v-22h3c1.23 0 2.181-1.084 3-2h8c.82.916 1.771 2 3 2h3zm-11 1c0 .552.448 1 1 1 .553 0 1-.448 1-1s-.447-1-1-1c-.552 0-1 .448-1 1zm9 1h-4l-2 2h-3.897l-2.103-2h-4v18h16v-18zm-13 9.729l.855-.791c1 .484 1.635.852 2.76 1.654 2.113-2.399 3.511-3.616 6.106-5.231l.279.64c-2.141 1.869-3.709 3.949-5.967 7.999-1.393-1.64-2.322-2.686-4.033-4.271z"/>
+					</svg>
+				</button>
 
 				<img src="{% if player.image %}{{ player.image.url }}{% else %}{% static 'img/nopic.png' %}{% endif %}" class="profile__ava" {% if player.party %}{% if player.party.members_image %}{% if party_back %}style="background-image: url({{ player.party.members_image.url }}); background-size: cover;"{% endif %}{% endif %}{% endif %}>
 				{% if ava_border %}
@@ -460,6 +463,11 @@
 	</div>
 	<!-- КОНЕЦ МОДАЛЬНОГО ОКНА НАСТРОЕК -->
 	<script src="{% static 'redesign/js/copy_to_clip.js' %}?{{ csrf_token }}"></script>
+	<script>
+		if (document.getElementById('profile__id')) {
+			const buttonIdCopy = new IdCopy('{{ request.get_host }}/profile/{% autoescape off %}{{ player.pk }}{% endautoescape %}/');
+		}
+	</script>
 	<script src="{% static 'redesign/js/profile.js' %}?{{ csrf_token }}"></script>
 	<script src="{% static 'redesign/js/cropper.js' %}?{{ csrf_token }}"></script>
 
