--- a/chat/templates/chat/stickers_shop.html
+++ b/chat/templates/chat/stickers_shop.html
@@ -53,7 +53,7 @@
         {% for pack in available_packs %}
         <li {% if forloop.counter0 == 0 %}class="active"{% endif %}>
             <a data-toggle="tab" href="#stickerpack_{{ pack.pk }}" data-id="{{ pack.pk }}" class="pack_header">
-                <img src="{{ header_img_dict|dict_key:pack.pk }}" width="100" height="100">
+                <img src="{{ header_img_dict|dict_key:pack.pk }}" width="100" height="100" style="pointer-events: none;">
                 {{ pack.title }}
             </a>
         </li>
