попытка отобразить карту на гнилых яблоках

--- a/region/templates/region/map.html
+++ b/region/templates/region/map.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 
-<div style="position: relative;">
+<div style="position: relative; height: 80vh">
   <div id="mapid" style="z-index: 1"></div>
   <div id="district_info" style="z-index: 2; display:none; position: absolute; background-color:rgba(13, 13, 13, 0.5);
   font:13px bold sans-serif;color:#fff; width: 400px; top:20px; right:20px; overflow:hidden;
@@ -20,7 +20,7 @@
 <!--  <div id="district_info" style="display:none; position:fixed;background-color:rgba(13, 13, 13, 0.5);font:13px bold sans-serif;color:#fff;width:20%;overflow:hidden"></div>-->
 </div>
  <style>
-     #mapid { height: 200%; }
+     #mapid { height: 100%; }
  </style>
  <script>
  function get_district_info(event) {
