--- a/party/templates/party/party_view.html
+++ b/party/templates/party/party_view.html
@@ -99,13 +99,18 @@
                                             {% endif %}
                                         </a>
                                     </div>
-                                    <div class="col-xs-5 col-sm-5 col-md-5">
+                                    <div class="col-xs-4 col-sm-4 col-md-4">
                                         <a href='/profile/{{ member.pk }}' target="_blank">
                                             <font size="4"><b>{{ member.nickname }}</b></font>
                                         </a>
                                     </div>
-                                    <div class="col-xs-5 col-sm-5 col-md-5">
+                                    <div class="col-xs-4 col-sm-4 col-md-4">
                                         <font size="4"><b>{{ member.party_post.title }}</b></font>
+                                    </div>
+                                    <div class="col-xs-2 col-sm-2 col-md-2">
+                                        {% if online_dict|has_key:member.pk %}
+                                        <font size="4"><b>{{ online_dict|dict_key:member.pk }}</b></font>
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <div class="line"></div>
