--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -458,7 +458,7 @@ a {
 
 @keyframes copyed {
   0% {transform: translateX(0) scale(1); opacity: 0;}
-  50% {transform: translateX(-100%) scale(1); opacity: 1;}
+  35% {transform: translateX(-100%) scale(1); opacity: 1;}
   100% {transform: translateX(-100%) scale(1.25); opacity: 0;}
 }
 
@@ -3187,6 +3187,494 @@ p.overview__love-stat-timer {
   }
 }
 
+/*! war */
+
+.war {
+  padding-top: 14rem;
+  padding-bottom: 24rem;
+  height: calc(100vh - 60rem);
+  overflow-y: auto;
+}
+
+.war__title {
+  margin: 0;
+  margin-bottom: 24rem;
+}
+
+.war__par {
+  width: 336rem;
+  margin: 0 auto;
+  margin-bottom: 24rem;
+  height: 24rem;
+  overflow: hidden;
+  transition: height 0.5s ease;
+}
+
+.war__par--visible {
+  height: initial;
+}
+
+.war__par-title-svg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 24rem;
+  height: 24rem;
+}
+
+.war__par.active .war__par-title-svg{
+  transform: scaleY(-1);
+}
+
+.war__par-title {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 24rem;
+  font-weight: 400;
+  font-size: 18rem;
+  line-height: 24rem;
+  text-align: center;
+  letter-spacing: -0.04em;
+  color: var(--c10one);
+  background-color: var(--c30);
+  border: 0;
+  padding: 0;
+}
+
+.war__par-list {
+  padding: 8rem;
+  list-style: none;
+  margin: 0;
+  border: 1px solid var(--c30);
+  height: calc(100vh - 467rem);
+  overflow-y: auto;
+}
+
+.war__block {
+  position: relative;
+  height: 120rem;
+  font-size: 14rem;
+}
+
+.war__block-first-side {
+  position: absolute;
+  top: 12rem;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.war__block-first-side img {
+  display: block;
+  width: 34rem;
+  height: 34rem;
+  margin-right: 4rem;
+}
+.war__block-first-side span {
+  width: 100rem;
+}
+
+.war__block-phase {
+  top: 5rem;
+  margin: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.war__block-shield {
+  position: absolute;
+  top: 12rem;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.war__block-shield img {
+  display: block;
+  width: 34rem;
+  height: 34rem;
+  object-fit: contain;
+  object-position: center;
+}
+
+.war__block-shield span {
+  margin-right: 4rem;
+  text-align: right;
+}
+
+.war__block-icon-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(-50%);
+}
+.war__block-icon-wrapper::before {
+  flex-shrink: 0;
+  display: block;
+  width: calc(50% - 17rem);
+  height: 1px;
+  content: '';
+  background-image: linear-gradient(to right, transparent, var(--c10one));
+}
+
+.war__block-icon-wrapper::after {
+  flex-shrink: 0;
+  display: block;
+  width: calc(50% - 17rem);
+  height: 1px;
+  content: '';
+  background-image: linear-gradient(to left, transparent, var(--c10one));
+}
+
+.war__block-icon {
+  flex-shrink: 0;
+  display: block;
+  width: 34rem;
+  height: 34rem;
+  object-fit: contain;
+  object-position: center;
+}
+
+.war__block-time {
+  position: absolute;
+  left: 50%;
+  bottom: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0;
+  transform: translateX(-50%);
+}
+
+.war__block-second-side {
+  position: absolute;
+  bottom: 12rem;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.war__block-second-side img {
+  display: block;
+  width: 34rem;
+  height: 34rem;
+  object-fit: contain;
+  object-position: center;
+}
+
+.war__block-second-side span {
+  margin-right: 4rem;
+  width: 100rem;
+  text-align: right;
+}
+
+.war__par-table-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  text-align: center;
+  line-height: 36rem;
+  height: 36rem;
+  font-size: 14rem;
+  font-weight: 400;
+  border-left: 1px solid var(--c30);
+  border-right: 1px solid var(--c30);
+}
+
+.war__par-table-title::before {
+  flex-shrink: 0;
+  margin-right: 6rem;
+  display: block;
+  width: 75rem;
+  height: 1px;
+  content: '';
+  background-image: linear-gradient(to right, transparent, var(--c10one));
+}
+
+.war__par-table-title::after {
+  flex-shrink: 0;
+  margin-left: 6rem;
+  display: block;
+  width: 75rem;
+  height: 1px;
+  content: '';
+  background-image: linear-gradient(to left, transparent, var(--c10one));
+}
+
+.war__par-table {
+  width: 100%;
+  border: 1px solid var(--c30);
+  border-collapse: collapse;
+  font-size: 14rem;
+  padding-top: 4rem;
+}
+
+.war__par-table tr:nth-of-type(even) {
+  background-color: var(--c30);
+}
+
+.war__par-table.odd tr:nth-of-type(odd) {
+  background-color: var(--c30);
+}
+
+.war__par-table.odd tr:nth-of-type(even) {
+  background-color: initial;
+}
+
+.war__par-table tr td:first-of-type {
+  padding-left: 12rem;
+}
+
+.war__par-table tr td:last-of-type {
+  padding-right: 12rem;
+  text-align: right;
+}
+
+.war__par-table tr td {
+  padding: 4rem 0;
+}
+
+.war__par-front {
+  padding: 12rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-left: 1px solid var(--c30);
+  border-right: 1px solid var(--c30);
+}
+
+.war__par-front-left {
+  display: flex;
+  flex-direction: column;
+}
+
+.war__label-text {
+  display: flex;
+  justify-content: space-between;
+  width: 130rem;
+  margin: 0;
+  font-size: 14rem;
+}
+
+.war__label {
+  position: relative;
+  display: flex;
+  width: 130rem;
+  height: 24rem;
+  margin-bottom: 12rem;
+  align-items: center;
+}
+
+.war__label::after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  content: '';
+  border: 1px solid var(--c10one);
+  pointer-events: none;
+}
+
+.war__label select {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 16rem;
+  line-height: 16rem;
+  letter-spacing: -0.05em;
+  padding: 0 5rem;
+  border: 0;
+  background-color: var(--c60);
+  color: var(--c10one);
+  outline: none;
+  appearance: none;
+}
+
+.war__label select:focus {
+  box-shadow: 0 0 1rem 0 var(--c10one);
+}
+
+.war__label svg {
+  position: absolute;
+  right: 5rem;
+  top: 8rem;
+  width: 19rem;
+  height: 10rem;
+  pointer-events: none;
+}
+
+.war__par-send {
+  border: 1px solid var(--c30);
+  border-top: none;
+}
+
+.war__par-send-title {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  font-size: 14rem;
+  line-height: 30rem;
+  padding: 0 12rem;
+  background-color: var(--c30);
+}
+
+.war__par-send-common {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  font-size: 14rem;
+  line-height: 30rem;
+  padding: 0 12rem;
+}
+
+.war__par-send-common-right {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  font-size: 14rem;
+  line-height: 24rem;
+}
+
+.war__par-send-common-right::before {
+  position: absolute;
+  top: 5rem;
+  left: 0;
+  display: block;
+  width: 80rem;
+  height: 18rem;
+  content: '';
+  border: 1px solid var(--c10one);
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.war__par-send-common-right input{
+  width: 80rem;
+  height: 18rem;
+  line-height: 18rem;
+  padding: 0 6rem;
+  margin-right: 6rem;
+  background-color: transparent;
+  border: 0;
+  color: inherit;
+  text-align: right;
+}
+
+@media (min-width: 1200px) {
+  .war {
+    margin-top: 100rem;
+    margin-left: 330rem;
+    height: calc(100vh - 100rem);
+  }
+  .war__grid {
+    display: grid;
+    grid-template-columns: 336rem 168rem 168rem 336rem;
+    gap: 30rem;
+    width: max-content;
+    margin: 0 auto;
+  }
+  .war__title {
+    grid-column: 1 / 3;
+    height: 20rem;
+  }
+  .war__par {
+    height: initial;
+  }
+  .war__par:nth-of-type(1) {
+    grid-column: 1 / 2;
+    margin-bottom: 0;
+  }
+  .war__par:nth-of-type(2) {
+    grid-column: 2 / 4;
+    margin-bottom: 0;
+  }
+  .war__par:nth-of-type(3) {
+    grid-column: 4 / 5;
+    margin-bottom: 0;
+  }
+  .war__par:nth-of-type(4) {
+    grid-column: 1 / 3;
+    width: 534rem;
+    height: 300rem;
+    overflow-y: auto;
+  }
+  .war__par:nth-of-type(5) {
+    grid-column: 3 / 5;
+    width: 534rem;
+    height: 300rem;
+    overflow-y: auto;
+  }
+  .war__par-title-svg {
+    display: none;
+  }
+}
+
+/*! tlist */
+
+.tlist {
+  padding-top: 24rem;
+}
+
+.tlist__buttons {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 6rem;
+  padding: 0 12rem;
+  margin-bottom: 24rem;
+  transform: scale(0.77);
+  transform-origin: left top;
+}
+
+.tlist__tab {
+  display: none;
+  height: calc(100vh - 137rem);
+}
+
+.tlist__tab.active {
+  display: block;
+}
+
+@media (min-width: 1200px) {
+  .tlist {
+    height: calc(100vh - 100rem);
+    margin-left: 330rem;
+    margin-top: 100rem;
+  }
+  .tlist__buttons {
+    display: none;
+  }
+  .tlist__tab-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 32rem;
+    width: max-content;
+    margin: 0 auto;
+  }
+  .tlist__tab {
+    display: block;
+    height: initial;
+  }
+}
+
 /*! .ct__view-info */
 
 .ct__view-info {
@@ -3223,7 +3711,7 @@ p.overview__love-stat-timer {
 
 .ct__view-info-list {
   padding-left: 46rem;
-  padding-right: 6rem;
+  padding-right: 4rem;
   display: flex;
   justify-content: space-between;
   list-style: none;
@@ -4378,7 +4866,7 @@ p.overview__love-stat-timer {
 }
 
 .ct__mid-btn .treg1 {
-  transform-origin: 43rem 15em;
+  transform-origin: 120rem 15em;
   animation: rotate360 10s linear infinite;
 }
 
@@ -4388,7 +4876,7 @@ p.overview__love-stat-timer {
 }
 
 .ct__mid-btn .treg3 {
-  transform-origin: 120rem 13rem;
+  transform-origin: 30rem 13rem;
   animation: rotate360 10s linear infinite;
 }
 
@@ -4739,6 +5227,40 @@ p.overview__love-stat-timer {
   .m-sett__form {
     width: 312rem;
     height: initial;
+  }
+}
+
+/*! -----custom scroll----- */
+
+.custom-scroll {
+  scrollbar-color: var(--c10two) var(--c30);
+  scrollbar-width: auto;
+  overflow-y: auto;
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: 4rem;
+  background-color: var(--c30);
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: var(--c10two);
+}
+
+@media (min-width: 1200px) {
+  .pc-custom-scroll {
+    scrollbar-color: var(--c10two) var(--c30);
+    scrollbar-width: auto;
+    overflow-y: auto;
+  }
+
+  .pc-custom-scroll::-webkit-scrollbar {
+    width: 4rem;
+    background-color: var(--c30);
+  }
+
+  .pc-custom-scroll::-webkit-scrollbar-thumb {
+    background-color: var(--c10two);
   }
 }
 
