--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -191,7 +191,7 @@
 					</p>
 				</div>
 
-				<div class="ct__s">
+				<div class="ct__s" onclick="window.location.href = '/skill_top/'" style="cursor: pointer;">
 					<h2 class="ct__s-title">{% trans 'характеристики' context "profile" %}</h2>
 					<p class="ct__s-text">
 						<font color="FF0000">{{ player.power }}</font>
