--- a/player/templates/player/redesign/lists/uni_list_templatetag.html
+++ b/player/templates/player/redesign/lists/uni_list_templatetag.html
@@ -87,7 +87,7 @@
 						{% endfor %}
 
 					{% else %}
-					  <td class="j-t-{{ col }}">
+					  <td class="j-t-{{ col }}" {% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithTop' %} style="cursor: pointer" onclick="window.open('/profile/{{ line.pk }}/')"{% endif %}>
 					  <!--картинка рега-->
 					  {% if col == 'on_map_id' %}
 							<img src="/static/img/regions/{{ line.on_map_id }}.png" alt="{{ col }}">
